--- a/Pandas/HeroesOfPymoli/pymoli.ipynb
+++ b/Pandas/HeroesOfPymoli/pymoli.ipynb
@@ -512,9 +512,7 @@
     "  * Purchase Count\n",
     "  * Average Purchase Price\n",
     "  * Total Purchase Value\n",
-    "  * Normalized Totals\n",
-    "  \n",
-    "# Ask TAs about normalized totals!!!"
+    "  * Normalized Totals"
    ]
   },
   {
@@ -643,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -671,9 +669,11 @@
        "      <th>Total Purchase Value</th>\n",
        "      <th>Average Purchase Value</th>\n",
        "      <th>Normalized Purchase Value</th>\n",
+       "      <th>Percentage of Purchases</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Age Group</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -687,6 +687,7 @@
        "      <td>96.62</td>\n",
        "      <td>$3.02</td>\n",
        "      <td>$4.39</td>\n",
+       "      <td>4.23%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10-14</th>\n",
@@ -694,6 +695,7 @@
        "      <td>83.79</td>\n",
        "      <td>$2.70</td>\n",
        "      <td>$4.19</td>\n",
+       "      <td>3.66%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
@@ -701,6 +703,7 @@
        "      <td>386.42</td>\n",
        "      <td>$2.91</td>\n",
        "      <td>$3.86</td>\n",
+       "      <td>16.90%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20-24</th>\n",
@@ -708,6 +711,7 @@
        "      <td>978.77</td>\n",
        "      <td>$2.91</td>\n",
        "      <td>$3.78</td>\n",
+       "      <td>42.81%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
@@ -715,6 +719,7 @@
        "      <td>370.33</td>\n",
        "      <td>$2.96</td>\n",
        "      <td>$4.26</td>\n",
+       "      <td>16.20%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-34</th>\n",
@@ -722,6 +727,7 @@
        "      <td>197.25</td>\n",
        "      <td>$3.13</td>\n",
        "      <td>$4.20</td>\n",
+       "      <td>8.63%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35-39</th>\n",
@@ -729,6 +735,7 @@
        "      <td>119.40</td>\n",
        "      <td>$2.84</td>\n",
        "      <td>$4.42</td>\n",
+       "      <td>5.22%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
@@ -736,6 +743,7 @@
        "      <td>53.75</td>\n",
        "      <td>$3.16</td>\n",
        "      <td>$4.89</td>\n",
+       "      <td>2.35%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -753,19 +761,19 @@
        "35-39                  42                119.40                  $2.84   \n",
        "40+                    17                 53.75                  $3.16   \n",
        "\n",
-       "          Normalized Purchase Value  \n",
-       "Age Group                            \n",
-       "<10                           $4.39  \n",
-       "10-14                         $4.19  \n",
-       "15-19                         $3.86  \n",
-       "20-24                         $3.78  \n",
-       "25-29                         $4.26  \n",
-       "30-34                         $4.20  \n",
-       "35-39                         $4.42  \n",
-       "40+                           $4.89  "
+       "          Normalized Purchase Value Percentage of Purchases  \n",
+       "Age Group                                                    \n",
+       "<10                           $4.39                   4.23%  \n",
+       "10-14                         $4.19                   3.66%  \n",
+       "15-19                         $3.86                  16.90%  \n",
+       "20-24                         $3.78                  42.81%  \n",
+       "25-29                         $4.26                  16.20%  \n",
+       "30-34                         $4.20                   8.63%  \n",
+       "35-39                         $4.42                   5.22%  \n",
+       "40+                           $4.89                   2.35%  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +791,12 @@
     "\n",
     "#calculate normalized purchase value\n",
     "age_df['Normalized Purchase Value'] = (age_df['Total Purchase Value'] / \\\n",
-    "                                        players_age_df['Total Count of Players']).map('${:,.2f}'.format)\n",
+    "                                       players_age_df['Total Count of Players']).map('${:,.2f}'.format)\n",
+    "\n",
+    "#calculate percent of all purchases\n",
+    "age_df['Percentage of Purchases'] = (age_df['Total Purchase Value'] / \\\n",
+    "                                     age_df['Total Purchase Value'].sum() * 100 \\\n",
+    "                                    ).map('{0:.2f}%'.format)\n",
     "\n",
     "age_df"
    ]
@@ -1008,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1016,58 +1029,65 @@
       "text/html": [
        "<style  type=\"text/css\" >\n",
        "</style>  \n",
-       "<table id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00\" > \n",
+       "<table id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00\" > \n",
        "<thead>    <tr> \n",
        "        <th class=\"blank\" ></th> \n",
        "        <th class=\"blank level0\" ></th> \n",
        "        <th class=\"col_heading level0 col0\" >Purchase Count</th> \n",
        "        <th class=\"col_heading level0 col1\" >Item Price</th> \n",
        "        <th class=\"col_heading level0 col2\" >Total Purchase Value</th> \n",
+       "        <th class=\"col_heading level0 col3\" >Percentage of purchases</th> \n",
        "    </tr>    <tr> \n",
        "        <th class=\"index_name level0\" >Item ID</th> \n",
        "        <th class=\"index_name level1\" >Item Name</th> \n",
        "        <th class=\"blank\" ></th> \n",
        "        <th class=\"blank\" ></th> \n",
        "        <th class=\"blank\" ></th> \n",
+       "        <th class=\"blank\" ></th> \n",
        "    </tr></thead> \n",
        "<tbody>    <tr> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level0_row0\" class=\"row_heading level0 row0\" >34</th> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level1_row0\" class=\"row_heading level1 row0\" >Retribution Axe</th> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row0_col0\" class=\"data row0 col0\" >9</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row0_col1\" class=\"data row0 col1\" >$4.14</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row0_col2\" class=\"data row0 col2\" >$37.26</td> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level0_row0\" class=\"row_heading level0 row0\" >34</th> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level1_row0\" class=\"row_heading level1 row0\" >Retribution Axe</th> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row0_col0\" class=\"data row0 col0\" >9</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row0_col1\" class=\"data row0 col1\" >$4.14</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row0_col2\" class=\"data row0 col2\" >$37.26</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row0_col3\" class=\"data row0 col3\" >1.63%</td> \n",
        "    </tr>    <tr> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level0_row1\" class=\"row_heading level0 row1\" >115</th> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level1_row1\" class=\"row_heading level1 row1\" >Spectral Diamond Doomblade</th> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row1_col0\" class=\"data row1 col0\" >7</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row1_col1\" class=\"data row1 col1\" >$4.25</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row1_col2\" class=\"data row1 col2\" >$29.75</td> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level0_row1\" class=\"row_heading level0 row1\" >115</th> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level1_row1\" class=\"row_heading level1 row1\" >Spectral Diamond Doomblade</th> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row1_col0\" class=\"data row1 col0\" >7</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row1_col1\" class=\"data row1 col1\" >$4.25</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row1_col2\" class=\"data row1 col2\" >$29.75</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row1_col3\" class=\"data row1 col3\" >1.30%</td> \n",
        "    </tr>    <tr> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level0_row2\" class=\"row_heading level0 row2\" >32</th> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level1_row2\" class=\"row_heading level1 row2\" >Orenmir</th> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row2_col0\" class=\"data row2 col0\" >6</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row2_col1\" class=\"data row2 col1\" >$4.95</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row2_col2\" class=\"data row2 col2\" >$29.70</td> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level0_row2\" class=\"row_heading level0 row2\" >32</th> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level1_row2\" class=\"row_heading level1 row2\" >Orenmir</th> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row2_col0\" class=\"data row2 col0\" >6</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row2_col1\" class=\"data row2 col1\" >$4.95</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row2_col2\" class=\"data row2 col2\" >$29.70</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row2_col3\" class=\"data row2 col3\" >1.30%</td> \n",
        "    </tr>    <tr> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level0_row3\" class=\"row_heading level0 row3\" >103</th> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level1_row3\" class=\"row_heading level1 row3\" >Singed Scalpel</th> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row3_col0\" class=\"data row3 col0\" >6</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row3_col1\" class=\"data row3 col1\" >$4.87</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row3_col2\" class=\"data row3 col2\" >$29.22</td> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level0_row3\" class=\"row_heading level0 row3\" >103</th> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level1_row3\" class=\"row_heading level1 row3\" >Singed Scalpel</th> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row3_col0\" class=\"data row3 col0\" >6</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row3_col1\" class=\"data row3 col1\" >$4.87</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row3_col2\" class=\"data row3 col2\" >$29.22</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row3_col3\" class=\"data row3 col3\" >1.28%</td> \n",
        "    </tr>    <tr> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level0_row4\" class=\"row_heading level0 row4\" >107</th> \n",
-       "        <th id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00level1_row4\" class=\"row_heading level1 row4\" >Splitter, Foe Of Subtlety</th> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row4_col0\" class=\"data row4 col0\" >8</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row4_col1\" class=\"data row4 col1\" >$3.61</td> \n",
-       "        <td id=\"T_1af34162_2c65_11e8_b1ac_8c85901d5a00row4_col2\" class=\"data row4 col2\" >$28.88</td> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level0_row4\" class=\"row_heading level0 row4\" >107</th> \n",
+       "        <th id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00level1_row4\" class=\"row_heading level1 row4\" >Splitter, Foe Of Subtlety</th> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row4_col0\" class=\"data row4 col0\" >8</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row4_col1\" class=\"data row4 col1\" >$3.61</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row4_col2\" class=\"data row4 col2\" >$28.88</td> \n",
+       "        <td id=\"T_0e14597a_2d57_11e8_9a57_8c85901d5a00row4_col3\" class=\"data row4 col3\" >1.26%</td> \n",
        "    </tr></tbody> \n",
        "</table> "
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x10e7fa080>"
+       "<pandas.io.formats.style.Styler at 0x10eafbb38>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,10 +1114,17 @@
     "#swap columns\n",
     "item_top_df = item_top_df.reindex(columns = ['Purchase Count', 'Item Price','Total Purchase Value'])\n",
     " \n",
+    "#calculate total purchases\n",
+    "total_purchases = pymoli_df['Price'].sum()\n",
+    "\n",
+    "#calculate percentage of total purcahses per item\n",
+    "item_top_df['Percentage of purchases'] = (item_top_df['Total Purchase Value'] / \\\n",
+    "                                          total_purchases * 100 \\\n",
+    "                                         ).map('{0:.2f}%'.format)    \n",
+    "    \n",
     "#format values\n",
     "item_top_df = item_top_df.style.format({'Item Price': '${:,.2f}', 'Total Purchase Value': '${:,.2f}'})\n",
     "\n",
-    "                             \n",
     "item_top_df"
    ]
   },
@@ -1105,22 +1132,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As final considerations:\n",
-    "\n",
-    "* Your script must work for both data-sets given.\n",
-    "* You must use the Pandas Library and the Jupyter Notebook.\n",
-    "* You must submit a link to your Jupyter Notebook with the viewable Data Frames. \n",
-    "* You must include an exported markdown version of your Notebook called  `README.md` in your GitHub repository.  \n",
-    "* You must include a written description of three observable trends based on the data. \n",
-    "* See [Example Solution](HeroesOfPymoli/HeroesOfPymoli_Example.pdf) for a reference on expected format. "
+    "## Observations:\n",
+    "* 80% of the players are male\n",
+    "* Almost half of the players are between 20-24 yo\n",
+    "* All age groups spend about the same amount of money per player\n",
+    "* Top purchased items are about the same percentage of all purchases"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
