Updated comments in Gender demographic section

--- a/Pandas/HeroesOfPymoli/pymoli.ipynb
+++ b/Pandas/HeroesOfPymoli/pymoli.ipynb
@@ -393,9 +393,7 @@
     "  * Purchase Count\n",
     "  * Average Purchase Price\n",
     "  * Total Purchase Value\n",
-    "  * Normalized Totals\n",
-    "  \n",
-    "# Ask TAs about normalized totals!!!"
+    "  * Normalized Totals"
    ]
   },
   {
