--- a/Pandas/HeroesOfPymoli/pymoli.ipynb
+++ b/Pandas/HeroesOfPymoli/pymoli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,7 @@
     "\n",
     "# Read the file into a Pandas DataFrame\n",
     "# 'records' : list like [{column -> value}, ... , {column -> value}]\n",
-    "pymoli_df = pd.read_json(json_path, orient='records')\n",
-    "\n",
-    "# Print the first five rows of data to the screen\n",
-    "#pymoli_df.head()"
+    "pymoli_df = pd.read_json(json_path, orient='records')"
    ]
   },
   {
