Fix image insert code in notebook and markdown files

--- a/Pyber/Pyber.ipynb
+++ b/Pyber/Pyber.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Pyber\n",
     "\n",
-    "<img class=\"img-thumbnail rounded float-right\" src=\"images/Ride.png\" alt=\"Ride\" style=\"width: 350px;\" align=\"right\"/>\n",
+    "![Ride](images/Ride.png)\n",
     "\n",
     "The ride sharing bonanza continues! Seeing the success of notable players like Uber and Lyft, you've decided to join a fledgling ride sharing company of your own. In your latest capacity, you'll be acting as Chief Data Strategist for the company. In this role, you'll be expected to offer data-backed guidance on new opportunities for market differentiation.\n",
     "\n",
