Add screenshots of charts to markdown

--- a/Pyber/Pyber.ipynb
+++ b/Pyber/Pyber.ipynb
@@ -1099,6 +1099,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Bubble chart\n",
+    "![Pies](images/bubble.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In addition, you will be expected to produce the following three pie charts:\n",
     "\n",
     "* % of Total Fares by City Type\n",
@@ -2009,6 +2017,14 @@
     "ax3.set_title('Drivers', loc ='left', x=0.1, y=0.9, weight='bold', color='dimgray')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pie charts\n",
+    "![Pies](images/pies.png)"
    ]
   },
   {
