--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -17,9 +17,6 @@
     "A plot from the sentiment analysis is then tweeted to the PlotBot5 twitter feed. See below for examples of scatter plots you will generate:\n",
     "\n",
     "![@juanitasoranno.png](images/@juanitasoranno.png)\n",
-    "![@nancypwong.png](images/@nancypwong.png)\n",
-    "![nytimes.png](images/nytimes.png)\n",
-    "\n",
     "\n",
     "Hints, requirements, and considerations:\n",
     "\n",
@@ -50,10 +47,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies\n",
+    "import tweepy\n",
+    "import pandas as pd\n",
+    "from pprint import pprint\n",
+    "from config import *\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Twitter API Keys\n",
+    "consumer_key = consumer_key\n",
+    "consumer_secret = consumer_secret\n",
+    "access_token = access_token\n",
+    "access_token_secret = access_token_secret\n",
+    "\n",
+    "# Twitter credentials\n",
+    "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+    "auth.set_access_token(access_token, access_token_secret)\n",
+    "api = tweepy.API(auth, parser=tweepy.parsers.JSONParser())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rwCSV(path,rw='r',df=None,columns=None):\n",
+    "    '''\n",
+    "    Reads CSV from path to pandas dataframe (rw='r')\n",
+    "    Writes/appends to CSV path from pandas dataframe (rw='w')\n",
+    "    Columns: array\n",
+    "    '''\n",
+    "    if rw=='r':\n",
+    "        if os.path.isfile(path):\n",
+    "            return pd.read_csv(path)\n",
+    "        else:\n",
+    "            return pd.DataFrame()\n",
+    "    elif rw=='w':\n",
+    "        # if file does not exist write with header \n",
+    "        if not os.path.isfile(path):\n",
+    "            df.to_csv(path,index=False, columns=columns)\n",
+    "            print(f\"rwCSV: saved {df.shape[0]} row(s) as new file to '{path}'\")\n",
+    "        else: # else it exists so append without writing the header\n",
+    "            df.to_csv(path,mode = 'a',header=False,index=False, columns=columns)\n",
+    "            print(f\"rwCSV: appended {df.shape[0]} row(s) to '{path}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get mentions\n",
+    "def getMentions():\n",
+    "    '''\n",
+    "    read user mentions for twitter account\n",
+    "    '''\n",
+    "    try:\n",
+    "        return api.mentions_timeline()\n",
+    "    except tweepy.TweepError as e:\n",
+    "        print(f\"Something's not right. Error: {e}\")\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def workMentions():\n",
+    "    '''\n",
+    "    get mentions from twitter and save to CSV file\n",
+    "    '''\n",
+    "    \n",
+    "    #set up resulting columns\n",
+    "    columns = ['mention_tweet_id','text','mention_date','mention_user_id','mention_user_name','full_response']\n",
+    "\n",
+    "    #try getting mentions\n",
+    "    mention_response = getMentions()\n",
+    "\n",
+    "    #if there are mentions go on\n",
+    "    if mention_response:\n",
+    "        print(f'Got response with {len(mention_response)} tweet(s)')\n",
+    "\n",
+    "        # try reading mentions CSV\n",
+    "        path = 'results/mentions.csv'\n",
+    "        mentions_df = rwCSV(path)\n",
+    "\n",
+    "        # if mentions df columns not equal to columns on CSV create empty DF with columns\n",
+    "        if not mentions_df.columns.tolist() == columns: \n",
+    "            print(f'Creating new DF with columns: {columns}')\n",
+    "            mentions_df = pd.DataFrame(columns=columns)\n",
+    "\n",
+    "        #add mentions to a DF\n",
+    "        for response in mention_response:\n",
+    "            #check if the tweet has already been added to DF\n",
+    "            if response['id'] not in mentions_df['mention_tweet_id'].tolist():\n",
+    "                mentions_dict = {'mention_tweet_id':response['id'],\n",
+    "                                 'text':response['text'],\n",
+    "                                 'mention_date':response['created_at'],\n",
+    "                                 'mention_user_id':response['user']['id'],\n",
+    "                                 'mention_user_name':response['user']['name'],\n",
+    "                                 'full_response':response \\\n",
+    "                                }\n",
+    "                mentions_df = mentions_df.append(mentions_dict,ignore_index=True)\n",
+    "\n",
+    "                #convert dates\n",
+    "                mentions_df['mention_date'] = pd.to_datetime(mentions_df['mention_date'])\n",
+    "\n",
+    "                #save to CSV\n",
+    "                rwCSV('results/mentions.csv','w',mentions_df,columns)\n",
+    "            else:\n",
+    "                print(f\"Tweet id: {response['id']} is in CSV already\")\n",
+    "\n",
+    "    #if getMentions() responded with False\n",
+    "    else:\n",
+    "        print('No new mentions')\n",
+    "    return mentions_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something's not right. Error: [{'code': 187, 'message': 'Status is a duplicate.'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    api.update_status('Testing if this works')\n",
+    "    print('Just tweeted')\n",
+    "except tweepy.TweepError as e:\n",
+    "    print(f\"Something's not right. Error: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up resulting DFs\n",
+    "tweets = pd.DataFrame()"
+   ]
   }
  ],
  "metadata": {
