Solve getMentions else bug

--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## PlotBot\n",
     "\n",
-    "In this activity, more challenging than the last, you will build a Twitter bot that sends out visualized sentiment analysis of a Twitter account's recent tweets.\n",
+    "Build a Twitter bot that sends out visualized sentiment analysis of a Twitter account's recent tweets.\n",
     "\n",
     "Visit [https://twitter.com/PlotBot5](https://twitter.com/PlotBot5) for an example of what your script should do.\n",
     "\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,15 +78,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Helpers"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,17 @@
     "    '''\n",
     "    Reads CSV from path to pandas dataframe (rw='r')\n",
     "    Writes/appends to CSV path from pandas dataframe (rw='w')\n",
-    "    Columns: array\n",
+    "    Columns: array-like\n",
     "    '''\n",
     "    if rw=='r':\n",
-    "        if os.path.isfile(path):\n",
+    "        if os.path.isfile(path): \n",
+    "            print('rwCSV: returning DF from CSV')\n",
     "            return pd.read_csv(path)\n",
-    "        else:\n",
+    "        else: \n",
+    "            print('rwCSV: returning empty DF')\n",
     "            return pd.DataFrame()\n",
     "    elif rw=='w':\n",
+    "        df = pd.DataFrame(df)\n",
     "        # if file does not exist write with header \n",
     "        if not os.path.isfile(path):\n",
     "            df.to_csv(path,index=False, columns=columns)\n",
@@ -113,77 +116,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get mentions\n",
     "def getMentions():\n",
     "    '''\n",
-    "    read user mentions for twitter account\n",
+    "    gets mentions from twitter and saves to CSV file\n",
     "    '''\n",
-    "    try:\n",
-    "        return api.mentions_timeline()\n",
-    "    except tweepy.TweepError as e:\n",
-    "        print(f\"Something's not right. Error: {e}\")\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def workMentions():\n",
-    "    '''\n",
-    "    get mentions from twitter and save to CSV file\n",
-    "    '''\n",
-    "    \n",
     "    #set up resulting columns\n",
-    "    columns = ['mention_tweet_id','text','mention_date','mention_user_id','mention_user_name','full_response']\n",
+    "    columns = ['mention_tweet_id','text','mentioned_users','mention_date', \\\n",
+    "               'mention_user_id','mention_user_name','full_response']\n",
     "\n",
-    "    #try getting mentions\n",
-    "    mention_response = getMentions()\n",
+    "    #set up my twitter account name\n",
+    "    my_id = api.me()['id']\n",
+    "\n",
+    "    #get mentions\n",
+    "    try:\n",
+    "        mention_response = api.mentions_timeline()\n",
+    "        #print('got some kind of response')\n",
+    "    except tweepy.TweepError as e:\n",
+    "        print(f\"getMentions: Something's not right. Error: {e}\")\n",
+    "        mention_response = False\n",
     "\n",
     "    #if there are mentions go on\n",
     "    if mention_response:\n",
-    "        print(f'Got response with {len(mention_response)} tweet(s)')\n",
+    "        print(f'getMentions: Got response with {len(mention_response)} tweet(s)')\n",
     "\n",
     "        # try reading mentions CSV\n",
     "        path = 'results/mentions.csv'\n",
     "        mentions_df = rwCSV(path)\n",
+    "        new_mentions_df = pd.DataFrame(columns=columns)\n",
     "\n",
     "        # if mentions df columns not equal to columns on CSV create empty DF with columns\n",
     "        if not mentions_df.columns.tolist() == columns: \n",
-    "            print(f'Creating new DF with columns: {columns}')\n",
+    "            print(f'getMentions: Creating new DF with columns: {columns}')\n",
     "            mentions_df = pd.DataFrame(columns=columns)\n",
     "\n",
     "        #add mentions to a DF\n",
     "        for response in mention_response:\n",
+    "            #set up mentioned list\n",
+    "            mentioned_list = []\n",
+    "\n",
+    "            #create list of mentioned users\n",
+    "            for mention in response['entities']['user_mentions']:\n",
+    "                if mention['id'] != my_id:\n",
+    "                    mentioned_list.append(mention['id'])\n",
+    "\n",
     "            #check if the tweet has already been added to DF\n",
     "            if response['id'] not in mentions_df['mention_tweet_id'].tolist():\n",
     "                mentions_dict = {'mention_tweet_id':response['id'],\n",
     "                                 'text':response['text'],\n",
+    "                                 'mentioned_users':mentioned_list,\n",
     "                                 'mention_date':response['created_at'],\n",
     "                                 'mention_user_id':response['user']['id'],\n",
     "                                 'mention_user_name':response['user']['name'],\n",
     "                                 'full_response':response \\\n",
     "                                }\n",
+    "                #grab all the mentions (append to CSV)\n",
     "                mentions_df = mentions_df.append(mentions_dict,ignore_index=True)\n",
-    "\n",
+    "                \n",
+    "                #grab only new mentions (append to empty DF)\n",
+    "                new_mentions_df = new_mentions_df.append(mentions_dict,ignore_index=True)\n",
     "                #convert dates\n",
-    "                mentions_df['mention_date'] = pd.to_datetime(mentions_df['mention_date'])\n",
-    "\n",
-    "                #save to CSV\n",
-    "                rwCSV('results/mentions.csv','w',mentions_df,columns)\n",
+    "                #mentions_df['mention_date'] = pd.to_datetime(mentions_df['mention_date'])\n",
     "            else:\n",
-    "                print(f\"Tweet id: {response['id']} is in CSV already\")\n",
+    "                print(f\"getMentions: Tweet id: {response['id']} is in CSV already\")\n",
+    "        #save to CSV\n",
+    "        if new_mentions_df.shape[0] > 0:\n",
+    "            print(f'getMentions: saving new mentions to CSV')\n",
+    "            rwCSV(path,'w',new_mentions_df,columns)\n",
+    "        else:\n",
+    "            print('getMentions: No new mentions')\n",
     "\n",
     "    #if getMentions() responded with False\n",
-    "    else:\n",
-    "        print('No new mentions')\n",
+    "    else: \n",
+    "        print('getMentions: No new mentions')\n",
     "    return mentions_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getMentions: Got response with 3 tweet(s)\n",
+      "rwCSV: returning DF from CSV\n",
+      "getMentions: Tweet id: 983829906302873601 is in CSV already\n",
+      "getMentions: Tweet id: 983757509960839168 is in CSV already\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already\n",
+      "getMentions: No new mentions\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = getMentions()"
    ]
   },
   {
@@ -191,21 +222,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Something's not right. Error: [{'code': 187, 'message': 'Status is a duplicate.'}]\n"
-     ]
-    }
-   ],
    "source": [
     "try:\n",
     "    api.update_status('Testing if this works')\n",
