bugfix: adding only mentions with userID and not empty lists

--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -128,7 +128,7 @@
     "    columns = ['mention_tweet_id','text','mentioned_users','mention_date', \\\n",
     "               'mention_user_id','mention_user_name','full_response']\n",
     "\n",
-    "    #set up my twitter account name\n",
+    "    #set up my twitter account number\n",
     "    my_id = api.me()['id']\n",
     "\n",
     "    #get mentions\n",
@@ -164,7 +164,9 @@
     "                    mentioned_list.append(mention['id'])\n",
     "\n",
     "            #check if the tweet has already been added to DF\n",
-    "            if response['id'] not in mentions_df['mention_tweet_id'].tolist():\n",
+    "            #and that there are in fact mentioned users \n",
+    "            if response['id'] not in mentions_df['mention_tweet_id'].tolist() and \\\n",
+    "                len(mentioned_list) > 0:\n",
     "                mentions_dict = {'mention_tweet_id':response['id'],\n",
     "                                 'text':response['text'],\n",
     "                                 'mentioned_users':mentioned_list,\n",
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +216,103 @@
     }
    ],
    "source": [
-    "x = getMentions()"
+    "mentions_df = getMentions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mention_tweet_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>mentioned_users</th>\n",
+       "      <th>mention_date</th>\n",
+       "      <th>mention_user_id</th>\n",
+       "      <th>mention_user_name</th>\n",
+       "      <th>full_response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>983829906302873601</td>\n",
+       "      <td>New Tweet Analysis of @Discovery. Thank you Mi...</td>\n",
+       "      <td>[17842366]</td>\n",
+       "      <td>Tue Apr 10 22:11:42 +0000 2018</td>\n",
+       "      <td>979490736013021184</td>\n",
+       "      <td>Sonya</td>\n",
+       "      <td>{'created_at': 'Tue Apr 10 22:11:42 +0000 2018...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>983757509960839168</td>\n",
+       "      <td>@mindthatdata analyze: @Sonik_Belka</td>\n",
+       "      <td>[979490736013021184]</td>\n",
+       "      <td>Tue Apr 10 17:24:02 +0000 2018</td>\n",
+       "      <td>47926865</td>\n",
+       "      <td>Yegor Kryukov</td>\n",
+       "      <td>{'created_at': 'Tue Apr 10 17:24:02 +0000 2018...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>983698615347613696</td>\n",
+       "      <td>@mindthatdata testing again</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Tue Apr 10 13:30:00 +0000 2018</td>\n",
+       "      <td>47926865</td>\n",
+       "      <td>Yegor Kryukov</td>\n",
+       "      <td>{'created_at': 'Tue Apr 10 13:30:00 +0000 2018...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mention_tweet_id                                               text  \\\n",
+       "0  983829906302873601  New Tweet Analysis of @Discovery. Thank you Mi...   \n",
+       "1  983757509960839168                @mindthatdata analyze: @Sonik_Belka   \n",
+       "2  983698615347613696                        @mindthatdata testing again   \n",
+       "\n",
+       "        mentioned_users                    mention_date     mention_user_id  \\\n",
+       "0            [17842366]  Tue Apr 10 22:11:42 +0000 2018  979490736013021184   \n",
+       "1  [979490736013021184]  Tue Apr 10 17:24:02 +0000 2018            47926865   \n",
+       "2                    []  Tue Apr 10 13:30:00 +0000 2018            47926865   \n",
+       "\n",
+       "  mention_user_name                                      full_response  \n",
+       "0             Sonya  {'created_at': 'Tue Apr 10 22:11:42 +0000 2018...  \n",
+       "1     Yegor Kryukov  {'created_at': 'Tue Apr 10 17:24:02 +0000 2018...  \n",
+       "2     Yegor Kryukov  {'created_at': 'Tue Apr 10 13:30:00 +0000 2018...  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mentions_df.head()"
    ]
   },
   {
