--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
     "                    mentioned_list.append(mention['id'])\n",
     "\n",
     "            #check if the tweet has already been added to DF\n",
-    "            #and that there are in fact mentioned users \n",
+    "            #and that there are in fact mentioned users in the tweet\n",
     "            if response['id'] not in mentions_df['mention_tweet_id'].tolist() and \\\n",
     "                len(mentioned_list) > 0:\n",
     "                mentions_dict = {'mention_tweet_id':response['id'],\n",
@@ -181,7 +181,8 @@
     "                #grab only new mentions (append to empty DF)\n",
     "                new_mentions_df = new_mentions_df.append(mentions_dict,ignore_index=True)\n",
     "                #convert dates\n",
-    "                #mentions_df['mention_date'] = pd.to_datetime(mentions_df['mention_date'])\n",
+    "                mentions_df['mention_date'] = pd.to_datetime(mentions_df['mention_date'])\n",
+    "                new_mentions_df['mention_date'] = pd.to_datetime(mentions_df['mention_date'])\n",
     "            else:\n",
     "                print(f\"getMentions: Tweet id: {response['id']} is in CSV already\")\n",
     "        #save to CSV\n",
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -216,12 +217,13 @@
     }
    ],
    "source": [
+    "#get new mentions as DF\n",
     "mentions_df = getMentions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +262,7 @@
        "      <td>983829906302873601</td>\n",
        "      <td>New Tweet Analysis of @Discovery. Thank you Mi...</td>\n",
        "      <td>[17842366]</td>\n",
-       "      <td>Tue Apr 10 22:11:42 +0000 2018</td>\n",
+       "      <td>2018-04-10 22:11:42</td>\n",
        "      <td>979490736013021184</td>\n",
        "      <td>Sonya</td>\n",
        "      <td>{'created_at': 'Tue Apr 10 22:11:42 +0000 2018...</td>\n",
@@ -270,20 +272,10 @@
        "      <td>983757509960839168</td>\n",
        "      <td>@mindthatdata analyze: @Sonik_Belka</td>\n",
        "      <td>[979490736013021184]</td>\n",
-       "      <td>Tue Apr 10 17:24:02 +0000 2018</td>\n",
+       "      <td>2018-04-10 17:24:02</td>\n",
        "      <td>47926865</td>\n",
        "      <td>Yegor Kryukov</td>\n",
        "      <td>{'created_at': 'Tue Apr 10 17:24:02 +0000 2018...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>983698615347613696</td>\n",
-       "      <td>@mindthatdata testing again</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Tue Apr 10 13:30:00 +0000 2018</td>\n",
-       "      <td>47926865</td>\n",
-       "      <td>Yegor Kryukov</td>\n",
-       "      <td>{'created_at': 'Tue Apr 10 13:30:00 +0000 2018...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -293,20 +285,17 @@
        "     mention_tweet_id                                               text  \\\n",
        "0  983829906302873601  New Tweet Analysis of @Discovery. Thank you Mi...   \n",
        "1  983757509960839168                @mindthatdata analyze: @Sonik_Belka   \n",
-       "2  983698615347613696                        @mindthatdata testing again   \n",
        "\n",
-       "        mentioned_users                    mention_date     mention_user_id  \\\n",
-       "0            [17842366]  Tue Apr 10 22:11:42 +0000 2018  979490736013021184   \n",
-       "1  [979490736013021184]  Tue Apr 10 17:24:02 +0000 2018            47926865   \n",
-       "2                    []  Tue Apr 10 13:30:00 +0000 2018            47926865   \n",
+       "        mentioned_users        mention_date     mention_user_id  \\\n",
+       "0            [17842366] 2018-04-10 22:11:42  979490736013021184   \n",
+       "1  [979490736013021184] 2018-04-10 17:24:02            47926865   \n",
        "\n",
        "  mention_user_name                                      full_response  \n",
        "0             Sonya  {'created_at': 'Tue Apr 10 22:11:42 +0000 2018...  \n",
-       "1     Yegor Kryukov  {'created_at': 'Tue Apr 10 17:24:02 +0000 2018...  \n",
-       "2     Yegor Kryukov  {'created_at': 'Tue Apr 10 13:30:00 +0000 2018...  "
+       "1     Yegor Kryukov  {'created_at': 'Tue Apr 10 17:24:02 +0000 2018...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
