rwCSV function returns empty DF with columns' headers

--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +101,8 @@
     "            print('rwCSV: returning DF from CSV')\n",
     "            return pd.read_csv(path)\n",
     "        else: \n",
-    "            print('rwCSV: returning empty DF')\n",
-    "            return pd.DataFrame()\n",
+    "            print(f'rwCSV: returning new DF with columns: {columns}')\n",
+    "            return pd.DataFrame(columns=columns)\n",
     "    elif rw=='w':\n",
     "        df = pd.DataFrame(df)\n",
     "        # if file does not exist write with header \n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,13 +145,8 @@
     "\n",
     "        # try reading mentions CSV\n",
     "        path = 'results/mentions.csv'\n",
-    "        mentions_df = rwCSV(path)\n",
+    "        mentions_df = rwCSV(path,columns=columns)\n",
     "        new_mentions_df = pd.DataFrame(columns=columns)\n",
-    "\n",
-    "        # if mentions df columns not equal to columns on CSV create empty DF with columns\n",
-    "        if not mentions_df.columns.tolist() == columns: \n",
-    "            print(f'getMentions: Creating new DF with columns: {columns}')\n",
-    "            mentions_df = pd.DataFrame(columns=columns)\n",
     "\n",
     "        #add mentions to a DF\n",
     "        for response in mention_response:\n",
@@ -200,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -208,17 +203,59 @@
      "output_type": "stream",
      "text": [
       "getMentions: Got response with 3 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already\n",
+      "rwCSV: returning new DF with columns: ['mention_tweet_id', 'text', 'mentioned_users', 'mention_date', 'mention_user_id', 'mention_user_name', 'full_response']\n",
       "getMentions: Tweet id: 983698615347613696 is in CSV already\n",
-      "getMentions: No new mentions\n"
+      "getMentions: saving new mentions to CSV\n",
+      "rwCSV: saved 2 row(s) as new file to 'results/mentions.csv'\n"
      ]
     }
    ],
    "source": [
     "#get new mentions as DF\n",
     "mentions_df = getMentions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 1, 'two': 'twenty'}\n",
+      "key 1\n",
+      "two twenty\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_table(**kwargs):\n",
+    "    print(kwargs)\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(key, value)\n",
+    "        \n",
+    "print_table(key=1,two='twenty')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set up resulting columns\n",
+    "columns=['mention_tweet_id','mentioned_users','is_analyzed']\n",
+    "\n",
+    "# try reading mentions CSV\n",
+    "path = 'results/to_anal.csv'\n",
+    "to_anal_df = rwCSV(path)\n",
+    "\n",
+    "if not to_anal_df.columns.tolist() == columns: \n",
+    "    print(f'getAnal: Creating new DF with columns: {columns}')\n",
+    "    to_anal_df = pd.DataFrame(columns=columns)\n",
+    "\n"
    ]
   },
   {
