--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,8 @@
     "analyzer = SentimentIntensityAnalyzer()\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
-    "import ast"
+    "import ast\n",
+    "from time import sleep"
    ]
   },
   {
@@ -282,28 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getMentions: Got response with 3 tweet(s)\n",
-      "rwCSV: returning DF from CSV\n",
-      "getMentions: adding mention id: 17842366\n",
-      "getMentions: Tweet id: 983829906302873601 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: adding mention id: 979490736013021184\n",
-      "getMentions: Tweet id: 983757509960839168 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
-      "getMentions: No new mentions\n",
-      "rwCSV: returning DF from CSV\n",
-      "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 17842366 has already been analyzed\n",
-      "worker: user id: 979490736013021184 has already been analyzed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def worker():\n",
     "    #get new mentions as DF\n",
@@ -312,6 +294,7 @@
     "    #setup resulting CSV\n",
     "    path = 'results/analyzed.csv'\n",
     "    columns = ['user_id','user_name']\n",
+    "    print('worker: trying to read analyzed CSV')\n",
     "    analyzed_df = rwCSV(path,columns=columns)\n",
     "\n",
     "    #got through not analyzed rows\n",
@@ -319,25 +302,89 @@
     "        #get the list of mentioned users\n",
     "        #Note. for some reason `row` returns a string type variable and not list\n",
     "        #therefore using ast.literal_eval function to convert it to list\n",
-    "        mentioned_users = ast.literal_eval(row['mentioned_users'])\n",
+    "        print(row['mentioned_users'])\n",
+    "        if row['mentioned_users']:\n",
+    "            mentioned_users = ast.literal_eval(str(row['mentioned_users']))\n",
+    "        \n",
+    "            #loop through the list to analyse tweets and post graphs\n",
+    "            for mentioned_user in mentioned_users:\n",
+    "                if mentioned_user not in analyzed_df['user_id'].tolist():\n",
+    "                    print(f'worker: performing sentiment analysis for user_id {mentioned_user}')\n",
+    "                    sentiment = getSentiment(mentioned_user,pages=5)\n",
+    "                    print(f'worker: performed sentiment analysis for user_id {mentioned_user}')\n",
+    "                    mentioned_user_name = makeGraph(sentiment,mentioned_user)\n",
+    "                    print(f'worker: generated and tweeted graph for @{mentioned_user_name}')\n",
     "\n",
-    "        #loop through the list to analyse tweets and post graphs\n",
-    "        for mentioned_user in mentioned_users:\n",
-    "            if mentioned_user not in analyzed_df['user_id'].tolist():\n",
-    "                print(f'worker: performing sentiment analysis for user_id {mentioned_user}')\n",
-    "                sentiment = getSentiment(mentioned_user,pages=1)\n",
-    "                print(f'worker: performed sentiment analysis for user_id {mentioned_user}')\n",
-    "                mentioned_user_name = makeGraph(sentiment,mentioned_user)\n",
-    "                print(f'worker: generated and tweeted graph for @{mentioned_user_name}')\n",
-    "\n",
-    "                #change flag to analyzed and save CSV\n",
-    "                analyzed_df = analyzed_df.append({'user_name':mentioned_user_name,\n",
-    "                                                  'user_id':mentioned_user\n",
-    "                                                  },ignore_index=True)\n",
-    "                rwCSV(path,'w',analyzed_df,columns)\n",
-    "            else:\n",
-    "                print(f'worker: user id: {mentioned_user} has already been analyzed')\n",
+    "                    #change flag to analyzed and save CSV\n",
+    "                    analyzed_df = analyzed_df.append({'user_name':mentioned_user_name,\n",
+    "                                                      'user_id':mentioned_user\n",
+    "                                                      },ignore_index=True)\n",
+    "                    rwCSV(path,'w',analyzed_df,columns)\n",
+    "                else:\n",
+    "                    print(f'worker: user id: {mentioned_user} has already been analyzed')\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing worker:\n",
+      "getMentions: Got response with 3 tweet(s)\n",
+      "rwCSV: returning new DF with columns: ['mention_tweet_id', 'text', 'mentioned_users', 'mention_date', 'mention_user_id', 'mention_user_name', 'full_response']\n",
+      "getMentions: adding mention id: 17842366\n",
+      "getMentions: adding mention id: 979490736013021184\n",
+      "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
+      "getMentions: saving new mentions to CSV\n",
+      "rwCSV: saved 2 row(s) as new file to 'results/mentions.csv'\n",
+      "worker: trying to read analyzed CSV\n",
+      "rwCSV: returning new DF with columns: ['user_id', 'user_name']\n",
+      "[17842366]\n",
+      "worker: performing sentiment analysis for user_id 17842366\n",
+      "getSentiment: trying to obtain tweets for user id 17842366, page 1\n",
+      "getSentiment: trying to obtain tweets for user id 17842366, page 2\n",
+      "getSentiment: trying to obtain tweets for user id 17842366, page 3\n",
+      "getSentiment: trying to obtain tweets for user id 17842366, page 4\n",
+      "getSentiment: trying to obtain tweets for user id 17842366, page 5\n",
+      "worker: performed sentiment analysis for user_id 17842366\n",
+      "worker: generated and tweeted graph for @Discovery\n",
+      "rwCSV: saved 1 row(s) as new file to 'results/analyzed.csv'\n",
+      "[979490736013021184]\n",
+      "worker: performing sentiment analysis for user_id 979490736013021184\n",
+      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 1\n",
+      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 2\n",
+      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 3\n",
+      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 4\n",
+      "getSentiment: trying to obtain tweets for user id 979490736013021184, page 5\n",
+      "worker: performed sentiment analysis for user_id 979490736013021184\n",
+      "worker: generated and tweeted graph for @Sonik_Belka\n",
+      "rwCSV: appended 2 row(s) to 'results/analyzed.csv'\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-163-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# run the program\n",
+    "if __name__ == '__main__':\n",
+    "    while True:\n",
+    "        print('Initializing worker:')\n",
+    "        worker()\n",
+    "        sleep(300)"
    ]
   },
   {
