Bugfix: worker: save all sentiment columns to CSV

--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -256,12 +256,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def makeGraph(df,mentioned_user):\n",
-    "    path = 'results/image.png'\n",
+    "    path = 'results/image_' + str(mentioned_user) + '.png'\n",
     "    mentioned_user_name = api.get_user(mentioned_user)['screen_name']\n",
     "    plt.style.use('fivethirtyeight')\n",
     "    f, ax = plt.subplots(figsize=(20,10))\n",
@@ -273,10 +273,10 @@
     "    now = datetime.now()\n",
     "    now = now.strftime(\"%m/%d/%Y\")\n",
     "    plt.title(f\"Sentiment analysis of @{mentioned_user_name} tweets as of {now}\")\n",
-    "    plt.savefig(path+str(mentioned_user), format='png')\n",
+    "    plt.savefig(path, format='png')\n",
     "    #plt.show()\n",
     "    plt.close()\n",
-    "    api.update_with_media(path+str(mentioned_user))\n",
+    "    #api.update_with_media(path)\n",
     "    return mentioned_user_name"
    ]
   },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
     "    path_to_analyzed = 'results/analyzed.csv'\n",
     "    path_to_sentiment = 'results/sentiment.csv'\n",
     "    columns_analyzed = ['user_id','user_name']\n",
-    "    columns_sentiment = ['compound', 'tweet']\n",
+    "    columns_sentiment = ['user_id','date','tweet','compound','positive','negative','neutral']\n",
     "    print('worker: trying to read analyzed CSV')\n",
     "    analyzed_df = rwCSV(path,columns=columns_analyzed)\n",
     "\n",
@@ -336,7 +336,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['compound', 'date', 'negative', 'neutral', 'positive', 'tweet',\n",
+       "       'user_id'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -359,26 +381,7 @@
       "worker: performing sentiment analysis for user_id 17842366\n",
       "getSentiment: trying to obtain tweets for user id 17842366, page 1\n",
       "getSentiment: trying to obtain tweets for user id 17842366, page 2\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 3\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 4\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 5\n",
-      "rwCSV: appended 500 row(s) to 'results/sentiment.csv'\n",
-      "worker: performed sentiment analysis for user_id 17842366\n"
-     ]
-    },
-    {
-     "ename": "TweepError",
-     "evalue": "Invalid file type for image: None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTweepError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-213-5624cac36140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Initializing worker:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mworker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-206-c00a0b7c3b88>\u001b[0m in \u001b[0;36mworker\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'worker: performed sentiment analysis for user_id {mentioned_user}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m                     \u001b[0mmentioned_user_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmakeGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentiment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'compound'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmentioned_user\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'worker: generated and tweeted graph for @{mentioned_user_name}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-212-65cbb8f1d619>\u001b[0m in \u001b[0;36mmakeGraph\u001b[0;34m(df, mentioned_user)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m#plt.show()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_with_media\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmentioned_user\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmentioned_user_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/PythonData/lib/python3.6/site-packages/tweepy/api.py\u001b[0m in \u001b[0;36mupdate_with_media\u001b[0;34m(self, filename, *args, **kwargs)\u001b[0m\n\u001b[1;32m    217\u001b[0m         \"\"\"\n\u001b[1;32m    218\u001b[0m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'file'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m         \u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpost_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAPI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pack_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3072\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mform_field\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'media[]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'headers'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'post_data'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpost_data\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/PythonData/lib/python3.6/site-packages/tweepy/api.py\u001b[0m in \u001b[0;36m_pack_image\u001b[0;34m(filename, max_size, form_field, f)\u001b[0m\n\u001b[1;32m   1318\u001b[0m         \u001b[0mfile_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile_type\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1319\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfile_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'image/gif'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'image/jpeg'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'image/png'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1320\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTweepError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Invalid file type for image: %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mfile_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1321\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1322\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTweepError\u001b[0m: Invalid file type for image: None"
+      "getSentiment: trying to obtain tweets for user id 17842366, page 3\n"
      ]
     }
    ],
