Save final version

--- a/PlotBot/PlotBot.ipynb
+++ b/PlotBot/PlotBot.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
     "    plt.savefig(path, format='png')\n",
     "    #plt.show()\n",
     "    plt.close()\n",
-    "    #api.update_with_media(path)\n",
+    "    api.update_with_media(path)\n",
     "    return mentioned_user_name"
    ]
   },
@@ -336,28 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['compound', 'date', 'negative', 'neutral', 'positive', 'tweet',\n",
-       "       'user_id'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentiment.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -377,11 +355,10 @@
       "getMentions: Tweet id: 983698615347613696 is in CSV already or doesn't have a valid mentioned user\n",
       "getMentions: No new mentions\n",
       "worker: trying to read analyzed CSV\n",
-      "rwCSV: returning new DF with columns: ['user_id', 'user_name']\n",
-      "worker: performing sentiment analysis for user_id 17842366\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 1\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 2\n",
-      "getSentiment: trying to obtain tweets for user id 17842366, page 3\n"
+      "rwCSV: returning DF from CSV\n",
+      "worker: user id: 17842366 has already been analyzed\n",
+      "worker: user id: 979490736013021184 has already been analyzed\n",
+      "worker: user id: 80067314 has already been analyzed\n"
      ]
     }
    ],
